# faux-lingo

./: README.md  SUMMARY  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
SUMMARIES/: PYTHON.md
attic/: ARCHITECTURE.md
attic/faux_lingo/: new_generator.py
attic/faux_lingo/core/: generator.py  graph.py  topics.py  vocabulary.py
attic/faux_lingo/utils/: entropy.py  logging.py
attic/tests/: test_generator.py  test_graph.py
faux_lingo/: SUMMARY  data_generator.py  dataset.py  generator.py  utils.py
faux_lingo/analysis/: SUMMARY  entropy.py
faux_lingo/core/: SUMMARY  colors.py  generator.py  graph.py  serialization.py  special_tokens.py  topics.py  transitions.py  vocab_builder.py  vocab_extensions.py  vocab_mapping.py  vocabulary.py
faux_lingo/data/: SUMMARY  dataset.py
faux_lingo/utils/: entropy.py  logging.py
github/workflows/: SUMMARY
tests/: SUMMARY  test_colors.py  test_dataset.py  test_entropy.py  test_generator.py  test_graph.py  test_topics.py  test_transitions.py  test_vocab_builder.py  test_vocab_extensions.py  test_vocab_mapping.py  test_vocabulary.py  tst_generator.py
