[metadata]
name = faux_lingo
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A synthetic language toolkit for NLP using constructed language data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/faux_lingo
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    torch
    numpy
